# smolVLA

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
results/: metrics.json
scripts/: train_libero.sh  train_libero_full.sh  train_libero_full_dataset.sh  train_libero_lora.sh
src/smolvla_manuf/: __init__.py  analysis.py  configs.py  train.py
tests/: test_analysis.py  test_configs.py
