[project]
name = "smolvla-manuf"
version = "0.1.0"
description = "SmolVLA fine-tuning for manufacturing pick-and-place manipulation"
requires-python = ">=3.12"
dependencies = [
    "lerobot[libero,smolvla,peft]==0.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.8", "mypy>=1.13", "pre-commit>=4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smolvla_manuf"]

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["smolvla_manuf"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "lerobot.*",
    "torch.*",
    "torchvision.*",
    "transformers.*",
    "peft.*",
    "mujoco.*",
    "robosuite.*",
    "wandb.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
